--- a/mysite/spotifyWrapped/static/spotifyWrapped/initialLogIn.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/initialLogIn.css
@@ -1,27 +1,90 @@
-/* General Styling */
+/* General Styles */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body, html {
+body {
     height: 100%;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Hiragino Kaku Gothic Std', sans-serif;
     scroll-behavior: smooth;
     overflow-x: hidden;
-    background-color: #f4f4f4;
-    color: #333;
-}
-
-section {
-    width: 100%;
-    min-height: 100vh;
+    background: linear-gradient(120deg, #003057, #00121e);
+    background-size: 100% 100%;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    font-family: 'Inter', sans-serif;
+    overflow: hidden;
+}
+
+
+
+.container {
+    display: flex;
+    flex-direction: column; /* Stack elements vertically */
+    justify-content: center; /* Center elements vertically inside container */
+    align-items: center; /* Center elements horizontally */
     text-align: center;
-    padding: 60px 20px;
+    gap: 20px; /* Space between the elements inside container */
+    padding: 20px;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 16px;
+}
+
+.title-and-gif {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.title {
+    font-size: 3.5rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+}
+
+.gif {
+    width: 330px;
+    height: auto;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.link {
+    font-size: 1.2rem;
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s, transform 0.3s;
+}
+
+.link:hover {
+    color: #FFCC00;
+    transform: scale(1.1);
+}
+
+.divider {
+    width: 2px;
+    height: 40px;
+    background-color: white;
 }
 
 /* Hero Section */
@@ -185,10 +248,7 @@ section {
 
 /* Translate Button */
 .translate-button {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: #1DB954;
+    background-color: transparent;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
@@ -196,16 +256,65 @@ section {
     border-radius: 25px;
     cursor: pointer;
     z-index: 1000;
-    transition: background 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 .translate-button:hover {
-    background-color: #14833B;
+    transform: scale(1.1);
+}
+
+.audioControls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#playPauseBtn {
+    padding: 10px 20px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 16px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: transform 0.3s ease;
+}
+
+#playPauseBtn:hover {
+    transform: scale(1.1);
+}
+
+.volume-slider {
+    -webkit-appearance: none;
+    width: 70px;
+    height: 5px;
+    background: #ddd;
+    outline: none;
+    border-radius: 5px;
+}
+
+.volume-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #FFCC00;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.volume-slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: #007bff;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 /* Modal */
 .modal {
-    display: none; /* Hidden by default */
+    display: none;
     position: fixed;
     z-index: 1001;
     left: 0;
